# synthara

./: .gitignore  MASTERPLAN.md  README.md  config.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.opencode/mcp/: synthara.json
.opencode/skills/: synthara-dev.md
src/synthara/: __main__.py
src/synthara/agents/: base.py  editor.py  orchestrator.py  planner.py  researcher.py  writer.py
src/synthara/core/: config.py  llm.py  models.py
src/synthara/mcp/: server.py
src/synthara/memory/: store.py
src/synthara/ui/: cli.py  dashboard.py
tests/: test_agents.py  test_integration.py
