[project]
name = "synthara"
version = "0.1.0"
description = "Multi-agent AI research & content platform powered by free OpenRouter models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["ai", "agents", "openrouter", "llm", "research"]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "ddgs>=8.0",
    "wikipedia-api>=0.7",
    "tomli>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "mypy>=1.11",
]
web = [
    "streamlit>=1.38",
]

[project.scripts]
synthara = "synthara.__main__:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that call real LLM APIs (require API keys)",
    "slow: tests that take longer than 30 seconds",
]
